Making java 8 compatible and Composite design pattern